chore(project-map): 音声アップロード機能の変更を反映
- src/app/audios/upload/page.tsx の変更に伴い、project-map.yaml を更新

  - supabase, AudioFile, uuidv4 のインポート情報を追加

  - getAudioDuration メソッドの情報を追加

--- a/project-map.yaml
+++ b/project-map.yaml
@@ -54,8 +54,11 @@ files:
       - '@/utils/toastUtils:{showErrorToast,showLoadingToast,updateToast}'
       - '@/contexts/AuthContext:{useAuth}'
       - next/link:{Link}
+      - '@/utils/supabase:{supabase,AudioFile}'
+      - uuid:{v4 as uuidv4}
     interfaces: []
     methods:
+      - 'getAudioDuration(file: File)'
       - UploadPage()
       - 'handleFileSelect(selectedFile: File)'
       - validateForm()
