fix(audio): オーディオファイルのダウンロード方法を改善

--- a/project-map.yaml
+++ b/project-map.yaml
@@ -157,7 +157,8 @@ files:
         AudioDropDownMenu({
           isOpen,
           onClose,
-          onDownload,
+          audioUrl,
+          audioTitle,
           onChangePlaybackRate,
           currentPlaybackRate,
         }: AudioDropDownMenuProps)
