feat(tailwind): Tailwind CSS 設定ファイルを新規作成し、テーマ設定を追加

--- a/project-map.yaml
+++ b/project-map.yaml
@@ -514,3 +514,14 @@ files:
     purpose: ''
     state: []
     type: module
+  - path: tailwind.config.ts
+    exports:
+      - default:variable
+    imports:
+      - tailwindcss:{Config}
+    interfaces: []
+    methods: []
+    props: []
+    purpose: ''
+    state: []
+    type: module
